--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,7 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 
 spring.sql.init.mode=never
+#spring.sql.init.mode=always
 
 spring.data.rest.base-path=api
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
