--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,8 @@
             <version>2.6.4</version>
         </dependency>
 
+
+
         <dependency>
             <groupId>com.google.zxing</groupId>
             <artifactId>core</artifactId>
@@ -61,6 +63,12 @@
             <groupId>com.google.zxing</groupId>
             <artifactId>javase</artifactId>
             <version>3.3.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+            <version>2.6.5</version>
         </dependency>
 
 
